Bug 421354 - Form fields bad rendering when scrolling
Summary: Form fields bad rendering when scrolling
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.04.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
: 423819 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-11 17:00 UTC by Simone Gaiarin
Modified: 2020-09-25 16:44 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.11.2
Sentry Crash Report:


Attachments
Bad rendering screenshot (2.55 MB, image/bmp)
2020-05-11 17:00 UTC, Simone Gaiarin
Details
original pdf (100.56 KB, application/pdf)
2020-05-11 17:01 UTC, Simone Gaiarin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simone Gaiarin 2020-05-11 17:00:35 UTC
Created attachment 128368 [details]
Bad rendering screenshot

STEPS TO REPRODUCE
1. Click show forms
2. Scroll a bit up/down (possibly zoom in as well)

OBSERVED RESULT
Form fields are all messy rendered (see attachments)



SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2
Kernel Version: 5.4.38-1-MANJARO
OS Type: 64-bit
Comment 1 Simone Gaiarin 2020-05-11 17:01:54 UTC
Created attachment 128369 [details]
original pdf
Comment 2 Albert Astals Cid 2020-05-13 21:26:27 UTC
Seems to me it's another regression of the QScroller patch, I can reproduce with release/20.04 branch but works in release/19.12 branch
Comment 3 Simone Gaiarin 2020-05-14 11:19:40 UTC
Commit 09cb524f seems to be the responsible of the bug.
Comment 4 Oliver Sander 2020-05-25 08:49:12 UTC
Does https://invent.kde.org/graphics/okular/merge_requests/169 fix it?  I cannot check myself -- the bug doesn't show up here.
Comment 5 Simone Gaiarin 2020-05-25 09:22:00 UTC
Tested on the original problematic PDF and it seems to fix the problem.
Comment 6 Albert Astals Cid 2020-07-03 20:52:29 UTC
*** Bug 423819 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2020-09-21 19:37:27 UTC
New MR: https://invent.kde.org/graphics/okular/-/merge_requests/281
Comment 8 Nate Graham 2020-09-25 16:44:39 UTC
Git commit bdb2df773d774c15cf0a17fcae198d3f2452cdfa by Nate Graham, on behalf of Kezi Olio.
Committed on 25/09/2020 at 15:41.
Pushed by ngraham into branch 'release/20.08'.

Fix forms when inertially scrolling

`setViewport` automatically adds an item to the history if it finds that it
moved for more than a page, which we don't want to do when automatically
scrolling, as with inertial scrolling.

This commit adds a new function `setViewportWithHistory()` which takes an
argument to optionally avoid preserving history. This avoids breaking ABI.
The new history-less functionality is used when inertially scrolling.
FIXED-IN: 1.11.2

M  +20   -13   core/document.cpp
M  +11   -0    core/document.h
M  +3    -2    ui/pageview.cpp

https://invent.kde.org/graphics/okular/commit/bdb2df773d774c15cf0a17fcae198d3f2452cdfa